--- a/src/index.html
+++ b/src/index.html
@@ -3,29 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda en Línea</title>
+    <title>Starmoon's shop</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mx-auto mt-4">
-    <h1 class="text-3xl font-bold mb-4">Tienda en Línea</h1>
+    <h1 class="text-3xl font-bold mb-4">Starmoon's shop</h1>
 
     <!-- Lista de Productos -->
     <div class="grid grid-cols-3 gap-4">
-        <div class="p-4 border">
-            <h2 class="text-xl font-semibold">Producto 1</h2>
-            <p>Descripción del Producto 1</p>
+        <div class="p-4 border rounded-lg shadow-lg">
+            <h2 class="text-xl font-semibold">Bracelet Gold</h2>
+            <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
             <p>Precio: $10.00</p>
-            <button class="bg-blue-500 text-white px-4 py-2 mt-2">Agregar al Carrito</button>
+            <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
         </div>
-        <!-- Aquí puedes agregar más productos de manera similar -->
     </div>
-
-    <!-- Carrito de Compra -->
-    <div class="mt-4">
-        <h2 class="text-2xl font-semibold">Carrito de Compra</h2>
-        <ul id="carrito" class="mt-2">
+    
+        <!-- new products -->
+        <div class="grid grid-cols-3 gap-4">
+            <div class="p-4 border rounded-lg shadow-lg">
+                <h2 class="text-xl font-semibold">Bracelet Pinky</h2>
+                <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
+                <p>Precio: $25.00</p>
+                <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
+            </div>
+        </div>
+        <div class="grid grid-cols-3 gap-4">
+            <div class="p-4 border rounded-lg shadow-lg">
+                <h2 class="text-xl font-semibold">Bracelet Silver</h2>
+                <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
+                <p>Precio: $10.00</p>
+                <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
+            </div>
+        </div>
             <!-- Los elementos del carrito se agregarán aquí -->
         </ul>
         <button id="realizarOrden" class="bg-green-500 text-white px-4 py-2 mt-2">Realizar Orden</button>
