--- a/src/index.html
+++ b/src/index.html
@@ -7,42 +7,51 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-
-<div class="container mx-auto mt-4">
-    <h1 class="text-3xl font-bold mb-4">Starmoon's shop</h1>
-
-    <!-- Lista de Productos -->
-    <div class="grid grid-cols-3 gap-4">
-        <div class="p-4 border rounded-lg shadow-lg">
-            <h2 class="text-xl font-semibold">Bracelet Gold</h2>
-            <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
-            <p>Precio: $10.00</p>
-            <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
-        </div>
+    <!-- Banner con un gradiente de fondo y un texto grande -->
+    <div class="bg-gradient-to-r from-purple-100 via-pink-100 to-red-100 p-4">
+        <h1 class="text-4xl text-[#c8ad8d]">Bienvenido a Starmoon's shop</h1>
     </div>
-    
-        <!-- new products -->
-        <div class="grid grid-cols-3 gap-4">
-            <div class="p-4 border rounded-lg shadow-lg">
-                <h2 class="text-xl font-semibold">Bracelet Pinky</h2>
-                <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
-                <p>Precio: $25.00</p>
-                <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
-            </div>
+    <div class="product flex items-center m-4">
+        <img src="Chronos1.jpg" alt="Chronos" class="w-24 h-24">
+        <div class="ml-4">
+            <h3 class="text-lg font-bold">Chronos</h3>
+            <p class="text-sm">Precio: $500</p>
         </div>
-        <div class="grid grid-cols-3 gap-4">
-            <div class="p-4 border rounded-lg shadow-lg">
-                <h2 class="text-xl font-semibold">Bracelet Silver</h2>
-                <p>Déjate cautivar por la belleza y la elegancia atemporal de nuestro brazalete de oro. Este deslumbrante brazalete está diseñado para realzar tu estilo y añadir un toque de lujo a cualquier ocasión.</p>
-                <p>Precio: $10.00</p>
-                <button class="bg-yellow-300 text-black px-4 py-2 mt-2 rounded">Agregar al Carrito</button>
-            </div>
-        </div>
-            <!-- Los elementos del carrito se agregarán aquí -->
-        </ul>
-        <button id="realizarOrden" class="bg-green-500 text-white px-4 py-2 mt-2">Realizar Orden</button>
+        <button class="ml-4 px-4 py-2 bg-blue-500 text-white rounded" onclick="addToCart('Chronos', 500)">Añadir al carrito 🛒</button>
     </div>
-</div>
+
+    <div class="product flex items-center m-4">
+        <img src="Golder1.jpg" alt="Golder" class="w-24 h-24">
+        <div class="ml-4">
+            <h3 class="text-lg font-bold">Golder</h3>
+            <p class="text-sm">Precio: $300</p>
+        </div>
+        <button class="ml-4 px-4 py-2 bg-blue-500 text-white rounded" onclick="addToCart('Golder', 300)">Añadir al carrito 🛒</button>
+    </div>
+
+    <div id="cart" class="border border-black p-4">
+        <h2 class="text-xl font-bold m-0">Carrito de compras</h2>
+        <ul id="items" class="list-none p-0"></ul>
+        <p id="total" class="text-lg font-bold">Total: $0</p>
+        <!-- Botón que diga hacer compra y que al hacer clic muestre un formulario -->
+        <button id="buy-button" class="px-4 py-2 bg-green-500 text-white rounded" onclick="showForm()">Hacer compra 💳</button>
+        <!-- Formulario oculto con los campos requeridos para la compra -->
+        <form id="buy-form" class="hidden flex flex-col gap-2 mt-4">
+            <label for="card-number">Número de tarjeta de crédito:</label>
+            <input id="card-number" type="number" required>
+            <label for="card-password">Contraseña:</label>
+            <input id="card-password" type="password" required>
+            <label for="name">Nombre:</label>
+            <input id="name" type="text" required>
+            <label for="surname">Apellido:</label>
+            <input id="surname" type="text" required>
+            <label for="address">Lugar de residencia:</label>
+            <input id="address" type="text" required>
+            <!-- Botón que diga confirmar compra y que al hacer clic valide los datos y muestre un mensaje -->
+            <button id="confirm-button" class="px-4 py-2 bg-green-500 text-white rounded self-end" onclick="confirmPurchase()">Confirmar compra ✅</button>
+        </form>
+    </div>
+
 
 </body>
 <script src="main.js"></script>
