Nueva imagen de la tienda y contador de productos y ya podemos eliminar cosas del carrito

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             </div>
             <span class="font-bold text-md">Forgot password</span>
           </div>
-          <a href="mainpage.html">
+          <a href="index1.html">
             <button class="w-full bg-black text-white p-2 rounded-lg mb-6 hover:bg-white hover:text-black hover:border hover:border-gray-300">
               Sign in
             </button>
@@ -52,7 +52,7 @@
           <button
             class="w-full border border-gray-300 text-md p-2 rounded-lg mb-6 hover:bg-black hover:text-white"
           >
-            <img src="/onlineStore2023/src/fotos/google.jpg" alt="img" class="w-6 h-6 inline mr-2" />
+            <img src="/src/fotos/google.jpg" alt="img" class="w-6 h-6 inline mr-2" />
             Sign in with Google
           </button>
           <div class="text-center text-gray-400">
@@ -63,7 +63,7 @@
 
         <div class="relative">
           <img
-            src="/onlineStore2023/src/fotos/loginimage.jpg"
+            src="/src/fotos/loginimage.jpg"
             alt="img"
             class="w-[400px] h-full hidden rounded-r-2xl md:block object-cover"
           />
